Fix vertical alignment of large button

--- a/resources/uploadWizard.less
+++ b/resources/uploadWizard.less
@@ -51,6 +51,11 @@ form.mwe-upwiz-form {
 
 	.mwe-upwiz-add-file {
 		font-size: large;
+
+		&.oo-ui-labelElement > .oo-ui-buttonElement-button {
+			// Fix vertical alignment of large text button
+			padding-top: 7px;
+		}
 	}
 
 	.oo-ui-buttonElement {
